Fix broken styles

--- a/css/main.css
+++ b/css/main.css
@@ -68,3 +68,7 @@ ul.posts {
 ul.posts li {
   list-style: none;
 }
+
+.inline-itm {
+  display: inline;
+}
